# browser.wit

./: README.md
examples/: README.md
examples/dotnet_counter/: .gitignore  Counter.cs  dotnet_counter.csproj  dotnet_counter.sln
examples/go_counter/: .gitignore  go.mod  go.sum  main.go
examples/go_counter/wit/: deps.toml  world.wit
examples/moonbit_counter/: .gitignore  moon.mod.json
examples/python_counter/: .gitignore  app.py
examples/rust_counter/src/: lib.rs
generate/: Cargo.toml
generate/src/: main.rs
wit/: web.wit
