[package]
name = "generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webidl2wit = { git = "https://github.com/wasi-gfx/webidl2wit.git", rev = "3ff232c5724b1f8031b754b27215550ec2472747" }
weedle = "0.13.0"
